# Gonverter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: conf.py  design.rst  index.rst
src/gonverter/: __main__.py  app.py  base64.py
src/tkinter_test_util/: actions.py  runner.py
test/: test_base64.py
tests_end_to_end/: test_convert.py
